--- a/0-/GSoC:2008/Collections 2.0/Querying concept.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Querying concept.mediawiki
@@ -1,18 +1,17 @@
-== Querying Concept ==
-=== A. Query_medialist ===
+== A. Query_medialist ==
 The client developer provides a collection structure resulting in a medialist to the daemon. The daemon then queries the metadata from the sqlite-database, so that there is one row for every entry of the medialist and the rows are in the same order as the medialist.
 
 Informal signature:
  query_medialist (coll, fetch)
 
-=== B. Query_clustered ===
+== B. Query_clustered ==
 The client developer provides a collection structure to the daemon, then metadata is queried for groups of ids aka clusters.
 
 The developer also specifies a list of things the ids in a cluster should have in common, for instance genre, artist or album. The daemon then queries the metadata from the sqlite-database, so that there is one row per cluster. If no things to have in common are specified all ids in the collection will be in one cluster.
 
-=== Examples ===
+== Examples ==
 
-==== Get a simple representation of the playlist ====
+=== Get a simple representation of the playlist ===
 As this is gets you a value-key dict you can use this for entry_format.
 
  query_medialist (
@@ -43,7 +42,7 @@ As this is gets you a value-key dict you can use this for entry_format.
      )
  )
  
-==== Get a simple representation of the playlist II ====
+=== Get a simple representation of the playlist II ===
 As this is gets you a value-key dict you can use this for entry_format.
 
  query_medialist (
@@ -78,7 +77,7 @@ As this is gets you a value-key dict you can use this for entry_format.
      )
  )
  
-==== Get a full propdict for every entry in the playlist ====
+=== Get a full propdict for every entry in the playlist ===
 
  query_medialist (
      reference ( reference = "_active", "namespace" = "Playlists" ), // coll: the active playlist
@@ -89,7 +88,7 @@ As this is gets you a value-key dict you can use this for entry_format.
 
  list (
      dict (
-         "data" ==> dict (
+         "data" => dict (
              "artist" = dict (
                  "plugin/id3v2" = "Something Corporate"
              ),
@@ -107,7 +106,7 @@ As this is gets you a value-key dict you can use this for entry_format.
      ...
  )
 
-==== Get a dict according to server-side source-preference ====
+=== Get a dict according to server-side source-preference ===
 
  query_medialist (
      reference ( reference = "_active", "namespace" = "Playlists" ), // coll: the active playlist
@@ -118,7 +117,7 @@ As this is gets you a value-key dict you can use this for entry_format.
 
  list (
      dict (
-         "data" ==> dict (
+         "data" => dict (
              "artist" = "Something Corporate",
              ...,
              "size" = "6126427",
@@ -129,7 +128,7 @@ As this is gets you a value-key dict you can use this for entry_format.
      ...
  )
 
-==== Get all fields the songs have ====
+=== Get all fields the songs have ===
 
  query_clustered (
      coll,                      // coll argument: the collection
@@ -142,7 +141,7 @@ As this is gets you a value-key dict you can use this for entry_format.
      dict ("fields" = list ( "added", "album", "artist", ...) )
  )
 
-==== Get the number of songs in the collection ====
+=== Get the number of songs in the collection ===
 
  query_clustered (
      coll,                      // coll argument: the collection
@@ -155,7 +154,7 @@ As this is gets you a value-key dict you can use this for entry_format.
      dict = ("count" = 10)
  )
 
-==== Albums, their number of songs, and total duration ====
+=== Albums, their number of songs, and total duration ===
 
  query_clustered (
      coll,
@@ -182,13 +181,13 @@ As this is gets you a value-key dict you can use this for entry_format.
      )
  )
 
-==== For every album get the ids + for every song a dict with tracknumber and title ====
+=== For every album get the ids + for every song a dict with tracknumber and title ===
 
  query_clustered (
      coll,                      // coll argument: the collection
-     dict ("album" ==> "album"), // cluster argument: 1 cluster for every album
+     dict ("album" => "album"), // cluster argument: 1 cluster for every album
      dict (
-         "album" ==> "cluster",
+         "album" => "cluster",
          "ids" = "id",
          "metadata" = dict (
              "field" = list ("tracknr", "title"),
@@ -225,7 +224,7 @@ As this is gets you a value-key dict you can use this for entry_format.
      )
  )
 
-=== Fetch/Cluster/Order Datatype ===
+== Fetch/Cluster/Order Datatype ==
 This is an informal description of the datatype used in the fetch, cluster, and order arguments below.
 
  dict (
@@ -234,50 +233,50 @@ This is an informal description of the datatype used in the fetch, cluster, and 
 
 Notes: "type" = "cluster" is only allowed in order and fetch arguments.
 
-==== short-cuts ====
- "id" ==> dict ( "type" = "id" )
- "count" ==> dict ( "type" = "count" )
- "random" ==> dict ( "type" = "random" )
- "cluster" ==> dict ( "type" = "cluster", label = <key-in-fetch-dict>) // (only in fetch argument)
- "field" ==> dict ( "type" = "metadata", "get" = list ("field") )
- "source" ==> dict ( "type" = "metadata", "get" = list ("source") )
- <string x> ==> dict ( "type" = "metadata", "field" = <string x> )
+=== short-cuts ===
+ "id" => dict ( "type" = "id" )
+ "count" => dict ( "type" = "count" )
+ "random" => dict ( "type" = "random" )
+ "cluster" => dict ( "type" = "cluster", label = <key-in-fetch-dict>) // (only in fetch argument)
+ "field" => dict ( "type" = "metadata", "get" = list ("field") )
+ "source" => dict ( "type" = "metadata", "get" = list ("source") )
+ <string x> => dict ( "type" = "metadata", "field" = <string x> )
  
  The default type is "metadata"
  
-==== Note ====
+=== Note ===
 Everywhere where a list is used below a string can also be used, which is converted to a list of one element:
-<string x> ==> list ( <string x> )
+<string x> => list ( <string x> )
 
-==== "type" = "cluster" ====
-===== Additional fields =====
+=== "type" = "cluster" ===
+==== Additional fields ====
  "label" = <cluster-label>,
  "get" = 
-===== Default values =====
+==== Default values ====
  "get" = list ( "value" )
 
-==== "type" = "metadata" ====
-===== Additional fields =====
+=== "type" = "metadata" ===
+==== Additional fields ====
  "get" = list (
      list of one or more of "field", "id", "value", "source". //FIXME: and "count". Where "count" must be last if it is present.
  ),
  "aggregate" = [ "first" | "sum" | "min" | "max" | "list" ]
  "source-preference" = [ "All" | "Default" ]
-===== Default values =====
+==== Default values ====
  "get" = list ("value")
  "aggregate" = "first"
  "source-preference" = "Default"
-===== Optional fields =====
+==== Optional fields ====
  "id" = list (...)
  "field" = list (...)
  "value" = list (...)
  "source" = list (...)
 
-=== Functions for convenience ===
+== Functions for convenience ==
 
 These are yet to be updated.
 
-==== C. Per id ====
+=== C. Per id ===
 
 The client developer provides a collection structure to the daemon. The daemon then queries the metadata from the sqlite-database, so that there is one row for every id of the resulting collection. The result is ordered ascending by id.
 
@@ -292,9 +291,9 @@ The client developer provides a collection structure to the daemon. The daemon t
           { id=141,  artist=Evanescence,       album=Not For Your Ears, title=Taking Over Me (Long), datasize={plugin/id3v2=5304040, plugin/file=5326558} },
           { id=1092, artist=Within Temptation, album=Mother Earth,      title=Mother Earth,          datasize={plugin/id3v2=8947303, plugin/file=8947840} }}
 
-==== D. Get all keys ====
+=== D. Get all keys ===
 
-==== E. The legacy way ====
+=== E. The legacy way ===
 
 The client developer provides a collection structure to the daemon and an optional list of things ids in a group should have in common, for instance genre, artist or album (the groupby-argument). The daemon then queries the metadata from the sqlite-database, so that there are zero or more rows per group, showing all permutations of the "free" (not used for grouping) properties. If no groupby-list is supplied all requested properties are used for grouping.
 
