add one minor item
Levitation import of page 2465 rev 8562 (minor).

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -1,4 +1,5 @@
 '''bold''' are the larger tasks.
+
 ''italic'' are the not-so-important tasks.
 
 * '''Documentation'''
@@ -30,6 +31,7 @@
 * Fix FIXMEs
 * Do TODOs
 * ''Add optimizations to collquery''
+* ''Serialize as a true DAG''
 
 == Pre February 10 2009 ==
 
