add history rewriting
Levitation import of page 2465 rev 8563 (minor).

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -28,6 +28,7 @@
 * Medialib
 ** '''Change schema to use value ids, which then appear in MediaTokens, MediaValues and MediaBackend tables'''
 * Abolish INTERSECTION_ORDERED
+* '''Chop history in logical chunks'''
 * Fix FIXMEs
 * Do TODOs
 * ''Add optimizations to collquery''
