/* XMMS2 */  Added link to the Vision document.
Levitation import of page 729 rev 8567.

--- a/0-/Developer Corner.mediawiki
+++ b/0-/Developer Corner.mediawiki
@@ -40,6 +40,7 @@ Policies and guidelines about processes and services related to the project as w
 * [[Roadmap]]
 * [[IRC Meeting]]
 * [[WAF modifications]]
+* [[XMMS2 Vision]]
 
 === Clients ===
 * [[Generic properties policy]]
