--- a/0-/XMMS2 Vision.mediawiki
+++ b/0-/XMMS2 Vision.mediawiki
@@ -31,3 +31,25 @@ Portability matters.
 
 * '''Embeddedfriendliness'''
 XMMS2 should work on smaller devices (but not compete with rockbox on tiny devices). A headless xmms2 server actually IS sexy, especially if there are clients available for "all" platforms.
+
+
+=== discussion ===
+
+Less is more. I suggest we try to combine these:
+
+* XMMS2 should be a kick-ass music player 
+* XMMS2 should facilitate playing and organizing of your music 
+
+And these: (they are saying same thing, no?)
+
+* XMMS2 will be the choice for audiophiles 
+* XMMS2 users cares about music and are passionate about quality 
+
+These are pretty similar too:
+
+* X in XMMS2 is for cross platform 
+* Embeddedfriendliness 
+
+[[User:Anders Gustafsson|Anders Waldenborg]] 21:33, 12 February 2009 (UTC)
+
+----
