Levitation import of page 2486 rev 8573.

--- a/0-/XMMS2 Vision.mediawiki
+++ b/0-/XMMS2 Vision.mediawiki
@@ -70,3 +70,7 @@ If I tried to condense things even more, that would give a few key points like:
 (not sure how to formulate the last nicely)
 
 [[User:Theefer|Theefer]] 23:07, 12 February 2009 (UTC)
+
+I think, going off of what theefer said, that Freedom is one of our most important values. XMMS2 is free, as software should be, and provides a freedom of choice to build the most perfect interface humanely possibe.
+
+[[User:Alesbl|Alesbl]] 23:07, 12 February 2009 (UTC)
